implemented basic APIs
